Bug 91543 - TABLE DESIGN window menu option Close causes BASE to crash
Summary: TABLE DESIGN window menu option Close causes BASE to crash
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta1
Hardware: All Linux (All)
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2
Keywords: regression
: 91560 (view as bug list)
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-05-23 19:04 UTC by Juanjo
Modified: 2016-10-25 19:24 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juanjo 2015-05-23 19:04:35 UTC
Steps:
1. Design a new table
2. Add some columns
3. Save table
4. Default table name (Table1)
5. When prompted "No primary key ... Should a primary key be created now?" answer Yes
6. Now, menu File > Close to go back to BASE main window
Result: BASE crashes

Steps:
1. Design a new table
2. Just select menu File > Close to go back to BASE main window
Result: BASE crashes
Comment 1 Robert Großkopf 2015-05-23 19:55:13 UTC
I could confirm this buggy behavior. There seem to bee many bugs in LO 5.0.0.0beta1.
You could save the table by pressing "Save", chose the main-window of Base and click "Save" also. But if you close the table-design-window LO crashes immediately.
No I have opened the database, opened the created table and closed it by pressing "x" - and LO crashes immediately also.
Same with a test-DB with queries. Couldn't close queries without crash of LO. Forms could be opened and could be closed ...
The whole screen flickers, the icons on the left for tables, queries, forms and reports appear sometimes without text - this version of LO seems to be a nightmare for this moment.
Comment 2 Robert Großkopf 2015-05-23 19:56:41 UTC
Switched hardware to "All". Appears here with OpenSUSE 64bit rpm Linux, has been reported for 32bit Linux.
Comment 3 raal 2015-05-24 07:24:50 UTC
*** Bug 91560 has been marked as a duplicate of this bug. ***
Comment 4 Julien Nabet 2015-05-24 14:36:48 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

Here's the console log:
warn:legacy.osl:28989:1:vcl/source/window/window.cxx:271: Window ( N5dbaui20OColumnControlWindowE ()) with live children destroyed:  9ScrollBar () 9ScrollBar ()
Window ( N5dbaui20OColumnControlWindowE ()) with live children destroyed:  9ScrollBar () 9ScrollBar ()
Comment 5 Commit Notification 2015-05-26 11:09:35 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=15e64391aeed35e5c85876650fd8093f20958d8b

tdf#91543 - TABLE DESIGN window menu option Close causes BASE to crash

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-05-26 15:17:11 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=38ce0b5ccf5d4398a26304fde19f0bb42dd13b91&h=libreoffice-5-0

tdf#91543 - TABLE DESIGN window menu option Close causes BASE to crash

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Michael Meeks 2015-05-26 20:31:42 UTC
Closing then; assuming Noel fixed the issue - verification appreciated.
Comment 8 Julien Nabet 2015-05-27 06:22:52 UTC
With master sources updated today, it doesn't crash anymore but it freezes once table window is opened.
I suppose it's related rendering work.
Anyway, let's put this one to VERIFIED