tdf#91543 - TABLE DESIGN window menu option Close causes BASE to crash

Change-Id: Ib169950f4e33dc71db66fd9a938838b568d2cc22